tests/ui/unresolved/unresolved-import-recovery.stderr
error[E0432]: unresolved import `unresolved`
  --> $DIR/unresolved-import-recovery.rs:4:13
   |
LL |     pub use unresolved;
   |             ^^^^^^^^^^ no external crate `unresolved`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
